--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -1,6 +1,6 @@
 {
     "extName": {
-      "message": "Screenity - Grava i Anota la Pantalla",
+      "message": "Screensy - Grava i Anota la Pantalla",
       "description": "Extension name"
     },
     "extDesc": {
