--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,6 +1,6 @@
 {
     "extName": {
-      "message": "Screenity - Bildschirmaufnahme & Beschriftungswerkzeug",
+      "message": "Screensy - Bildschirmaufnahme & Beschriftungswerkzeug",
       "description": "Extension name"
     },
     "extDesc": {
