--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -1,6 +1,6 @@
 {
     "extName": {
-      "message": "Screenity - Graba y anota tu pantalla",
+      "message": "Screensy - Graba y anota tu pantalla",
       "description": "Extension name"
     },
     "extDesc": {
