--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -1,6 +1,6 @@
 {
     "extName": {
-      "message": "Screenity - Registra lo schermo e annota",
+      "message": "Screensy - Registra lo schermo e annota",
       "description": "Extension name"
     },
     "extDesc": {
