--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -1,6 +1,6 @@
 {
     "extName": {
-      "message": "Screenity - Rejestrator ekranu & Narzędzie do adnotacji",
+      "message": "Screensy - Rejestrator ekranu & Narzędzie do adnotacji",
       "description": "Extension name"
     },
     "extDesc": {
