--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
     "extName": {
-      "message": "Screenity - Screen Recorder & Annotation Tool",
+      "message": "Screensy - Screen Recorder & Annotation Tool",
       "description": "Extension name"
     },
     "extDesc": {
