--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1,6 +1,6 @@
 {
     "extName": {
-      "message": "Screenity - Enregistreur d'écran et outil d'annotation",
+      "message": "Screensy - Enregistreur d'écran et outil d'annotation",
       "description": "Extension name"
     },
     "extDesc": {
