--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -1,6 +1,6 @@
 {
     "extName": {
-      "message": "स्क्रीनिटी – स्क्रीन रिकॉर्डिंग और व्याख्या का उपकरण",
+      "message": "स्क्रीनसी – स्क्रीन रिकॉर्डिंग और व्याख्या का उपकरण",
       "description": "Extension name"
     },
     "extDesc": {
