--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -1,6 +1,6 @@
 {
     "extName": {
-      "message": "Screenity - Perekam Layar & Alat Anotasi",
+      "message": "Screensy - Perekam Layar & Alat Anotasi",
       "description": "Extension name"
     },
     "extDesc": {
