--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -1,6 +1,6 @@
 {
     "extName": {
-      "message": "Screenity - Grave e faça anotações na tela",
+      "message": "Screensy - Grave e faça anotações na tela",
       "description": "Nome da extensão"
     },
     "extDesc": {
